@@ -463,6 +463,9 @@ Shows long usage instructions.
 .TP
 .BR \-\^\-version
 Print the version string.
+.TP
+.BR \-\^\-libversion
+Print version information on the mpg123 libraries being used (libmpg123, libout123, libsyn123).
 .SH HTTP SUPPORT
 In addition to reading MPEG audio streams from ordinary
 files and from the standard input,
