@@ -17,12 +17,12 @@
 #include <fmt123.h>
 
 /** A macro to check at compile time which set of API functions to expect.
- * This should be incremented at least each time a new symbol is added
+ * This must be incremented at least each time a new symbol is added
  * to the header.
  */
-#ifndef SYN123_API_VERSION
-#define SYN123_API_VERSION @SYNAPI_VERSION@
-#endif
+#define SYN123_API_VERSION 2
+/** library patch level at client build time */
+#define SYN123_PATCHLEVEL  0
 
 #ifndef MPG123_EXPORT
 /** Defines needed for MS Visual Studio(tm) DLL builds.
@@ -144,6 +144,23 @@ extern "C" {
 struct syn123_struct;
 /** Typedef shortcut as preferrend name for the handle type. */
 typedef struct syn123_struct syn123_handle;
+
+/** Get version of the mpg123 distribution this library build came with.
+ * (optional means non-NULL)
+ * \param major optional address to store major version number
+ * \param minor optional address to store minor version number
+ * \param patch optional address to store patchlevel version number
+ * \return full version string (like "1.2.3-beta4 (experimental)")
+ */
+MPG123_EXPORT
+const char *syn123_distversion(unsigned int *major, unsigned int *minor, unsigned int *patch);
+
+/** Get API version of library build.
+ * \param patch optional address to store patchlevel
+ * \return API version of library
+ */
+MPG123_EXPORT
+unsigned int syn123_libversion(unsigned int *patch);
 
 /** Functions that return an integer success code either return
  *  SYN123_OK if everything went fine, or one of the other detailed
