@@ -7,6 +7,7 @@
 */
 
 #include "config.h"
+#include "version.h"
 #include "compat.h"
 
 #if defined(WIN32) && defined(DYNAMIC_BUILD)
@@ -40,7 +41,7 @@ static void usage(int err)
 		fprintf(o, "You made some mistake in program usage... let me briefly remind you:\n\n");
 	}
 	fprintf(o, "Extract only MPEG frames from a stream using libmpg123 (stdin to stdout)\n");
-	fprintf(o, "\tversion %s; written and copyright by Thomas Orgis and the mpg123 project\n", PACKAGE_VERSION);
+	fprintf(o, "\tversion %s; written and copyright by Thomas Orgis and the mpg123 project\n", MPG123_VERSION);
 	fprintf(o,"\nusage: %s [option(s)] < input > output\n", progname);
 	fprintf(o,"\noptions:\n");
 	fprintf(o," -h     --help              give usage help\n");
