@@ -1,6 +1,11 @@
 1.32.0
 ------
-- Fall back to generic decoder if no yasm for MSVC (bug 346).
+- build:
+-- Fall back to generic decoder if no yasm for MSVC (bug 346).
+-- Move version handling out of configure.ac to ease other build systems.
+- mpg123: added --libversion
+- libmpg123, libout123, libsyn123: bumped API version for version query
+  functions
 
 1.31.2
 ------
